--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
-cat > .env.example <<'EOF'
 SERVICE_BASE64_64_KEY=changeme
 SERVICE_BASE64_64_SECRET=changeme
 SERVICE_PASSWORD_ADMIN=changeme
 ADMIN_EMAIL=admin@example.com
 CORS_ORIGIN=https://example.com
-EOF
+
+# MySQL Connection
+DB_CLIENT=mysql
+DB_HOST=mysql.example.com
+DB_PORT=3306
+DB_DATABASE=directus_prod
+DB_USER=directus_user
+DB_PASSWORD=strong_mysql_password
+
