--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
-cat > docker-compose.yml <<'EOF'
-version: '3.8'
-
 services:
   directus:
-    build: .
+    image: directus/directus:11
     container_name: secure-directus
     restart: unless-stopped
     ports:
@@ -14,24 +11,17 @@ services:
       - directus-extensions:/directus/extensions
       - directus-templates:/directus/templates
     environment:
-      KEY: ${SERVICE_BASE64_64_KEY}
-      SECRET: ${SERVICE_BASE64_64_SECRET}
-      ADMIN_EMAIL: ${ADMIN_EMAIL:-admin@example.com}
-      ADMIN_PASSWORD: ${SERVICE_PASSWORD_ADMIN}
-      DB_CLIENT: sqlite3
-      DB_FILENAME: /directus/database/data.db
-      WEBSOCKETS_ENABLED: true
-      RATE_LIMITER_ENABLED: true
-      RATE_LIMITER_POINTS: 50
-      RATE_LIMITER_DURATION: 1
-      SECURITY_SESSION_SECURE: true
-      SECURITY_SESSION_SAME_SITE: strict
-      SECURITY_CSP: "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'"
-      CORS_ENABLED: true
-      CORS_ORIGIN: ${CORS_ORIGIN}
-      CORS_METHODS: GET,POST,PATCH,DELETE
-      CORS_ALLOWED_HEADERS: Content-Type,Authorization
-      CORS_EXPOSED_HEADERS: Content-Range
+      KEY: ${KEY}
+      SECRET: ${SECRET}
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      DB_CLIENT: ${DB_CLIENT}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:8055/admin/login"]
       interval: 5s
@@ -43,4 +33,3 @@ volumes:
   directus-uploads:
   directus-extensions:
   directus-templates:
-EOF
