--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
-SERVICE_BASE64_64_KEY=changeme
-SERVICE_BASE64_64_SECRET=changeme
-SERVICE_PASSWORD_ADMIN=changeme
-ADMIN_EMAIL=admin@example.com
-CORS_ORIGIN=https://example.com
+# Directus config
+ADMIN_EMAIL=admin@webricktech.com
+ADMIN_PASSWORD=supersecurepassword
 
-# MySQL Connection
-DB_CLIENT=mysql
-DB_HOST=mysql.example.com
-DB_PORT=3306
-DB_DATABASE=directus_prod
-DB_USER=directus_user
-DB_PASSWORD=strong_mysql_password
+# Rclone config
+RCLONE_CONFIG_GDRIVE_TYPE=drive
+RCLONE_CONFIG_GDRIVE_SCOPE=drive
+RCLONE_CONFIG_GDRIVE_TOKEN={"access_token":"XXX","token_type":"Bearer","refresh_token":"XXX","expiry":"2025-08-11T00:00:00.000000000Z"}
 
+DB_CLIENT=pg
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=directus
+DB_USER=directus
+DB_PASSWORD=directus
+CORS_ORIGIN=*
