--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   directus:
-    image: 'directus/directus:11'
+    image: 'directus/directus:11.10'
     volumes:
       - 'directus-database:/directus/database'
       - 'directus-uploads:/directus/uploads'
@@ -12,7 +12,7 @@ services:
       - SECRET=$SERVICE_BASE64_64_SECRET
       - 'ADMIN_EMAIL=${ADMIN_EMAIL:-admin@example.com}'
       - ADMIN_PASSWORD=$SERVICE_PASSWORD_ADMIN
-      - DB_CLIENT=${DB_CLIENT}
+      - DB_CLIENT=mysql
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - DB_DATABASE=${DB_DATABASE}
@@ -20,12 +20,12 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - WEBSOCKETS_ENABLED=true
 
-      # CORS Settings
       - CORS_ENABLED=true
       - CORS_ORIGIN=${CORS_ORIGIN}
       - CORS_METHODS=GET,POST,PATCH,DELETE
       - CORS_ALLOWED_HEADERS=Content-Type,Authorization
       - CORS_EXPOSED_HEADERS=Content-Range
+      - PUBLIC_URL=https://admin.webricktech.com
     healthcheck:
       test:
         - CMD
